# ufrm

./: .gitignore  CMakeLists.txt  makefile
cmake/: srv.cmake
config/: dbsrv.toml  gamesrv.toml  gateway.toml  iosrv.toml  lbsrv.toml  proxy.toml
scripts/common/: base_class.lua  coroutine_mgr.lua  db_client.lua  define.lua  net.lua  util.lua
scripts/gamesrv/: main.lua
scripts/gamesrv/common/: net.lua
scripts/gamesrv/logic/: logic.lua  logic_mgr.lua  login.lua
scripts/gamesrv/role/: role.lua  role_mgr.lua
scripts/gamesrv/role_logic/: role_logic.lua
scripts/gamesrv/role_logic/item/: logic.lua
scripts/gamesrv/role_logic/login/: logic.lua
scripts/iosrv/: auth.lua  main.lua  register.lua
scripts/iosrv/common/: io_net.lua
sql/: init.sql  init_role.sql  init_user.sql  init_user_role.sql
src/: CMakeLists.txt  makefile  mk_base.mk  mk_lib.mk  mk_srv.mk
src/cgisrv/: makefile
src/common/: CMakeLists.txt  common.cpp  common.h  define.h  makefile
src/common/ coroutine/: coroutine.h  coroutine_mgr.cpp  coroutine_mgr.h
src/common/consistent_hash/: consistent_hash.hpp  murmurhash3.cpp
src/common/coroutine/: coroutine.cpp  coroutine.h  coroutine_mgr.cpp  coroutine_mgr.h
src/common/db_client/: db_client.cpp  db_client.h
src/common/lb_client/: lb_client.cpp  lb_client.h
src/common/proto/: common.proto  cs.proto  csid.proto  io.proto  ioid.proto  pblua.hpp  ss.proto  ssdcds.proto  ssgwgs.proto  ssgwio.proto  ssid.proto  sslcls.proto  sspcpx.proto
src/common/protocol/: common.pb.cc  common.pb.h  common.proto  cs.pb.cc  cs.pb.h  cs.proto  csid.pb.cc  csid.pb.h  csid.proto  io.pb.cc  io.pb.h  ioid.pb.cc  ioid.pb.h  pblua.cpp  pblua.h  pblua.hpp  ss.pb.cc  ss.pb.h  ss.proto  ssdcds.pb.cc  ssdcds.pb.h  ssgwgm.proto  ssgwgs.pb.cc  ssgwgs.pb.h  ssgwgs.proto  ssid.pb.cc  ssid.pb.h  ssid.proto  sslcls.pb.cc  sslcls.pb.h  sslcls.proto  sspcpx.pb.cc  sspcpx.pb.h  sspcpx.proto
src/common/px_client/: px_client.cpp  px_client.h
src/commonsrv/: CMakeLists.txt  commonsrv.cpp  commonsrv.h  main.cpp  makefile
src/commonsrv/common/: interface.cpp  interface.h
src/dbsrv/: CMakeLists.txt  dbsrv.cpp  dbsrv.h  main.cpp  makefile
src/gamesrv/: CMakeLists.txt  gamesrv.cpp  gamesrv.h  gamesrv.toml  main.cpp  makefile
src/gamesrv/common/: interface.cpp  interface.h
src/gamesrv/scripts/: main.lua
src/gateway/: CMakeLists.txt  gateway.cpp  gateway.h  gateway.toml  main.cpp  makefile
src/gateway_mgr/: gateway_mgr.cpp  gateway_mgr.h  gateway_mgr.toml  main.cpp  makefile
src/iosrv/: iosrv.cpp  iosrv.h  main.cpp  makefile
src/lbsrv/: CMakeLists.txt  lbsrv.cpp  lbsrv.h  lbsrv.toml  main.cpp  makefile
src/proxy/: CMakeLists.txt  main.cpp  makefile  proxy.cpp  proxy.h
src/tools/: start_all.sh  stop_all.sh
test/client/: main.cpp  makefile  mk_base.mk
tools/: build_proto.sh  check_all.sh  start_all.sh  stop_all.sh
